# sdk

./: .gitignore  Makefile  README.md  STANDARD.md  mkdocs.yml  requirements-docs.txt
.github/workflows/: docs.yml  publish.yml
docs/: changelog.md  index.md
docs/examples/: angular.md  codeigniter.md  laravel.md  next.md  overview.md  react.md  vue.md
docs/getting-started/: authentication.md  configuration.md  installation.md  quickstart.md
docs/guides/: error-handling.md  get-job.md  list-jobs.md  metadata.md  pagination.md  search-and-filters.md  server-side-pattern.md  similar-jobs.md
docs/reference/: client.md  errors.md  filters.md  jobs-api.md
docs/stylesheets/: extra.css
node/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
node/src/: errors.ts  index.ts  jobbox.ts
node/src/http/: client.ts
node/src/resources/: jobs.ts
node/src/types/: common.ts  jobs.ts
node/tests/: jobs.test.ts
overrides/partials/: logo.html
php/: .gitignore  CHANGELOG.md  LICENSE  README.md  composer.json  phpunit.xml
php/src/: JobBox.php  Version.php
php/src/Exceptions/: JobBoxApiException.php  JobBoxNetworkException.php
php/src/Http/: Client.php  CurlTransport.php  TransportInterface.php
php/src/Resources/: Jobs.php
php/tests/: JobsTest.php
python/: CHANGELOG.md  README.md  pyproject.toml
python/src/getjobbox/: __init__.py  _version.py  client.py  errors.py  http.py  types.py
python/src/getjobbox/resources/: __init__.py  jobs.py
python/tests/: test_jobs.py
