[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "getjobbox"
version = "0.1.0"
description = "Official JobBox Python SDK — Jobs public catalog and partner API key auth"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "JobBox" }]
keywords = ["jobbox", "sdk", "jobs", "api"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://getjobbox.com"
Documentation = "https://github.com/getjobbox/sdk/tree/main/python"
Repository = "https://github.com/getjobbox/sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/getjobbox"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
